--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       width: 100%;
       height: 100%;
       font-family: 'PressStart2P', sans-serif;
-      background: url('https://i.imgur.com/jzM25vG.png') repeat; /* Minecraft grass pixel texture */
+      background: url('https://i.imgur.com/jzM25vG.png') repeat;
+      /* Minecraft grass pixel texture */
       background-size: 64px 64px;
       overflow-x: hidden;
       color: #dddcd7;
@@ -397,8 +398,14 @@
     });
 
     openBtn.addEventListener('click', () => {
-      window.open('https://play.google.com/store/apps/details?id=com.game.mcpe.mods.oneblock', '_blank');
+      const url = 'https://play.google.com/store/apps/details?id=com.game.mcpe.mods.oneblock';
+      if (window.mraid && typeof window.mraid.open === 'function') {
+        window.mraid.open(url);
+      } else {
+        window.open(url, '_blank');
+      }
     });
+
 
     updateCarousel();
     updateInstallButton();
